# AIAGENT

./: .gitignore
FINALAI/: Graph.py  MOMgraph.py  README.md  main.py  pyproject.toml
FINALAI/data/outputs/: meeting1_mom.json
FINALAI/tools/: categorization_tool.py  extract_audio.py  leave_tool.py  summarization_tool.py
MCP-Project/: README.md  company_info.py  email_tool.py  leave_tool.py  main.py  mcp.json  mom_tool.py  pyproject.toml  server.py
developer/: README.md  pyproject.toml  report.md
developer/src/developer/: crew.py  main.py
developer/src/developer/config/: agents.yaml  tasks.yaml
developer/src/developer/tools/: RAG.py  requ.py
mom/: README.md  graph.py  main.py  pyproject.toml
mom/tools/: transcription_tool.py
rag/: README.md  pyproject.toml  report.md  requirements.txt
rag/src/rag/: crew.py  main.py
rag/src/rag/config/: agents.yaml  tasks.yaml
rag/src/rag/tools/: ingest_tool.py
