[project]
name = "rag"
version = "0.1.0"
description = "RAG using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=1.1.1",
    "crewai[tools]>=0.201.1,<1.0.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "openai>=1.109.1",
    "pypdf>=6.1.2",
]

[project.scripts]
rag = "rag.main:run"
run_crew = "rag.main:run"
train = "rag.main:train"
replay = "rag.main:replay"
test = "rag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
